# nAgent

./: .gitignore  CLAUDE.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_COMPARISON.md  README.md  REORGANIZATION_SUMMARY.md  check_chroma_retriever.py  pyproject.toml  verify_validation.py
.vim/: coc-settings.json
apps/agentic-rag/: README.md  pyproject.toml
apps/agentic-rag/src/: example.py
apps/agentic-rag/src/agentic_rag/: __init__.py  chunk_cli.py  generate_dataset.py  main.py  rag.py  validation_runner.py
apps/agentic-rag/src/agentic_rag/rags/: __init__.py  agentic.py  base.py  simple.py  vector.py
apps/agentic-rag/src/agentic_rag/tools/: __init__.py  vector_tools.py
apps/agentic-rag/tests/: calculator_validation_runner.py  test_agentic_rag.py  test_calculator_accuracy.py  test_calculator_validation.py  test_evaluation_integration.py  test_trace_persistence.py  test_vector_rag.py
apps/nagent/: pyproject.toml
apps/nagent/src/nagent/: eval.py  parser.py  rag.py  service.py  utils.py
apps/nagent/tests/: test_build.py  test_core_imports.py  test_eval.py  test_service.py
docs/: MIGRATION_GUIDE.md  PRD_Agentic_RAG.md  REORGANIZATION_SUMMARY.md  VALIDATION_FRAMEWORK.md  VALIDATION_QUICKSTART.md
examples/: README.md  calculator_demo.json  demo_docs.json
examples/validation/: calculator.json  calculator_config.json  calculator_dataset.json
libs/nagent-core/: README.md  pyproject.toml
libs/nagent-core/src/nagent_core/: __init__.py  agent.py  llm.py  prompt_utils.py  tool.py
libs/nagent-core/tests/: test_agent.py  test_multi_tool.py  test_react_agent.py  test_utils.py
libs/nagent-rag/: README.md  pyproject.toml
libs/nagent-rag/src/nagent_rag/: __init__.py  chunking.py  document_loaders.py  eval.py  models.py  query_utils.py  retriever.py  testset_generation.py  text_splitter.py  tools.py  validation.py
libs/nagent-rag/src/nagent_rag/retrievers/: __init__.py  base.py  chroma.py  keyword.py  vector.py
libs/nagent-rag/tests/: test_base_retriever.py  test_chroma_retriever.py  test_chunking_integration.py  test_document_loaders.py  test_keyword_retriever.py  test_persistence.py  test_retriever.py  test_retriever_tool.py  test_text_splitter.py  test_validation.py  test_validation_logic.py  test_vector_retriever.py  verify_format.py
notebooks/: PDFParser.py  simpe-rag.py
scripts/: run_e2e_eval.sh
src/nagent/: __init__.py
tests/: test_service.py  test_utils.py
