[project]
name = "nagent-project"
version = "0.1.0"
description = "nAgent Workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
workspace = { members = ["apps/*", "libs/*"] }

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.3.0",
    "pre-commit>=3.4.0",
    "ipykernel",
    "python-dotenv>=1.2.1",
    "viztracer>=1.1.1",
    "ipywidgets>=8.1.8",
    "pytest-asyncio>=1.3.0",
]

[tool.pyright]
include = ["apps/nagent/src", "apps/nagent/tests", "libs/nagent-core/src", "libs/nagent-core/tests"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
extraPaths = ["apps/nagent/src", "libs/nagent-core/src"]
executionEnvironments = [
  { root = "apps/nagent/src" },
  { root = "libs/nagent-core/src" }
]

[tool.pytest.ini_options]
pythonpath = ["apps/nagent/src", "libs/nagent-core/src"]
asyncio_mode = "auto"
