[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nagent-core",
    "nagent-rag",
    "google-genai>=1.61.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
nagent-core = { workspace = true }
nagent-rag = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
