[project]
name = "nagent-rag"
version = "0.1.0"
description = "RAG related components for nAgent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nagent-core",
    "ragas>=0.4.3",
    "langchain-core>=0.1.0",
    "pandas",
    "chromadb>=1.5.5",
]

[tool.uv.sources]
nagent-core = { workspace = true }

[project.optional-dependencies]
jieba = ["jieba>=0.42.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
